--- a/index.html
+++ b/index.html
@@ -68,5 +68,11 @@
             </div>
         </div>
         <!--Loading_anim_content_END-->
+
+                <!--Header_content-->
+                <header class="header">
+                    <div class="logo_header"><img src="public/img/logo/ohmyfood.png" alt="logo de ohmyfood"></div>
+            </header>
+            <!--Header_content_END-->
 </body>
 </html>
