--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/9d9146bdd7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="public/css/styles.css">
     <title>OMF</title>
 </head>
 <body>
